[gd_scene load_steps=2 format=3 uid="uid://vjksi81aj1ae"]

[ext_resource type="Script" uid="uid://4hy12ef7stho" path="res://Main/pause_menu.gd" id="1_oyd0v"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oyd0v")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -56.5
offset_right = 48.0
offset_bottom = 56.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="BtnResume" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="BtnMainMenu" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="BtnQuit" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Quit "
